src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>AK_Native_Tribally_Owned__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AK Native Tribally Owned</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AbilityOne__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ability One</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Account_Email_Address__c</fullName>
        <description>The general email address at the account (added for ANZ)</description>
        <inlineHelpText>The general email address at the account - specific email address should be added on the contacts.</inlineHelpText>
        <label>Account Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Account_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>AECOM employee with primary responsibility for this account, or lead contact if no account manager</inlineHelpText>
        <label>Account Manager</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>AECOM_Employee__c.Status__c</field>
                <operation>equals</operation>
                <value>Active</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>AECOM_Employee__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Name_for_Labels__c</fullName>
        <description>Reverses account names such as &quot;Chicago, City of&quot; to &quot;City of Chicago&quot; for mailing labels and other uses.</description>
        <formula>IF (CONTAINS (Name, &quot;, City of&quot;) , &quot;City of &quot; &amp; TRIM (LEFT (Name, (LEN (Name)-9))) , 
IF (CONTAINS (Name, &quot;, Cities of&quot;) , &quot;Cities of &quot; &amp; TRIM (LEFT (Name, (LEN (Name)-11))) , 
IF (CONTAINS (Name, &quot;, Town of&quot;) , &quot;Town of &quot; &amp; TRIM (LEFT (Name, (LEN (Name)-9))) , 
IF (CONTAINS (Name, &quot;, Region of&quot;) , &quot;Region of &quot; &amp; TRIM (LEFT (Name, (LEN (Name)-11))) , 
IF (CONTAINS (Name, &quot;, Municipality of&quot;) , &quot;Municipality of &quot; &amp; TRIM (LEFT (Name, (LEN (Name)-17))) , 
IF (CONTAINS (Name, &quot;, Charter Township of&quot;) , &quot;Charter Township of &quot; &amp; TRIM (LEFT (Name, (LEN (Name)-21))) , 
IF (CONTAINS (Name, &quot;, Township of&quot;) , &quot;Township of &quot; &amp; TRIM (LEFT (Name, (LEN (Name)-13))) , 
IF (CONTAINS (Name, &quot;, City and County of&quot;) , &quot;City and County of &quot; &amp; TRIM (LEFT (Name, (LEN (Name)-20))) , 
IF (CONTAINS (Name, &quot;, State of&quot;) , &quot;State of &quot; &amp; TRIM (LEFT (Name, (LEN (Name)-10))) , 
IF (CONTAINS (Name, &quot;, Port of&quot;) , &quot;Port of &quot; &amp; TRIM (LEFT (Name, (LEN (Name)-9))) , 
IF (CONTAINS (Name, &quot;, District of&quot;) , &quot;District of &quot; &amp; TRIM (LEFT (Name, (LEN (Name)-13))) , 
IF (CONTAINS (Name, &quot;, County of&quot;) , &quot;County of &quot; &amp; TRIM (LEFT (Name, (LEN (Name)-11))) , 
IF (CONTAINS (Name, &quot;, Government of&quot;) , &quot;Government of &quot; &amp; TRIM (LEFT (Name, (LEN (Name)-15))) , 
IF (CONTAINS (Name, &quot;, Borough of&quot;) , &quot;Borough of &quot; &amp; TRIM (LEFT (Name, (LEN (Name)-12))) ,  
IF (CONTAINS (Name, &quot;, Village of&quot;) , &quot;Village of &quot; &amp; TRIM (LEFT (Name, (LEN (Name)-12))) , 
IF (CONTAINS (Name, &quot;, Resort Village of&quot;) , &quot;Resort Village of &quot; &amp; TRIM (LEFT (Name, (LEN (Name)-19))) , 
IF (CONTAINS (Name, &quot;, Northern Village of&quot;) , &quot;Northern Village of &quot; &amp; TRIM (LEFT (Name, (LEN (Name)-21))) , 
IF (CONTAINS (Name, &quot;, Village District of&quot;) , &quot;Village District of &quot; &amp; TRIM (LEFT (Name, (LEN (Name)-21))) , 
IF (CONTAINS (Name, &quot;, Metropolitan Government of&quot;) , &quot;Metropolitan Government of &quot; &amp; TRIM (LEFT (Name, (LEN (Name)-28))) , 
IF (CONTAINS (Name, &quot;, Municipalite de&quot;), &quot;Municipalite de &quot; &amp; TRIM (LEFT (Name, (LEN (Name)-17))),
IF (CONTAINS (Name, &quot; HQ&quot;), TRIM (LEFT (Name, (LEN (Name)-3))),
IF (CONTAINS (Name, &quot; - HQ&quot;), TRIM (LEFT (Name, (LEN (Name)-5))),

Name))))))))))))))))))))))</formula>
        <inlineHelpText>Reverses account names such as &quot;Chicago, City of&quot; to &quot;City of Chicago&quot; for mailing labels and other uses.</inlineHelpText>
        <label>Account Name for Labels</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Name_in_Local_Language__c</fullName>
        <description>Enter Account in local language and characters</description>
        <inlineHelpText>Enter Account Name in local language and characters</inlineHelpText>
        <label>Account Name in Local Language</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctsGroupCustomer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Group Customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Accounts (Group Customer)</relationshipLabel>
        <relationshipName>AccountsGroupCustomer</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Agreement_expiration_date__c</fullName>
        <inlineHelpText>If we have an MSA with this client, and if it expires, enter the date it expires.</inlineHelpText>
        <label>Agreement expiration date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CAM_Account_Status__c</fullName>
        <description>Key CAM accounts, defined by the CAM group</description>
        <inlineHelpText>Select only if this account is on the official list of CAM (Corporate Account Management) accounts.</inlineHelpText>
        <label>CAM Account Status</label>
        <picklist>
            <picklistValues>
                <fullName>EMEA</fullName>
                <color>#0B6FCE</color>
            </picklistValues>
            <picklistValues>
                <fullName>US Central</fullName>
                <color>#E27001</color>
            </picklistValues>
            <picklistValues>
                <fullName>US East</fullName>
                <color>#78C953</color>
            </picklistValues>
            <picklistValues>
                <fullName>US West/Pacific</fullName>
                <color>#A845DC</color>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CAM_Alliance_Partner__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This box is checked if this account is on the list of Alliance Partners</description>
        <inlineHelpText>Check this box only if this account is on the list of AECOM&apos;s Alliance Partners</inlineHelpText>
        <label>CAM Alliance Partner?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CAM_Status_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>For use by CAM group - checked if account is currently active.</inlineHelpText>
        <label>CAM Status Active?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Chatter_Group__c</fullName>
        <inlineHelpText>Allows collaboration by staff without a CRM license.</inlineHelpText>
        <label>Chatter Group</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Comments__c</fullName>
        <inlineHelpText>Brief notes on this account for benefit of Salesforce users</inlineHelpText>
        <label>Client Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Client_Confidentiality_Agreement_in_effe__c</fullName>
        <inlineHelpText>Have we signed an agreement with this client to keep our work for them confidential?</inlineHelpText>
        <label>Client Confidentiality Agrmt in effect?</label>
        <picklist>
            <picklistValues>
                <fullName>Unknown</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Client_Group__c</fullName>
        <label>Client Group</label>
        <picklist>
            <picklistValues>
                <fullName>Industrial/Commercial</fullName>
                <color>#33FFFF</color>
            </picklistValues>
            <picklistValues>
                <fullName>Municipal</fullName>
                <color>#78C953</color>
            </picklistValues>
            <picklistValues>
                <fullName>National Government</fullName>
                <color>#E27001</color>
            </picklistValues>
            <picklistValues>
                <fullName>Private</fullName>
                <color>#A845DC</color>
            </picklistValues>
            <picklistValues>
                <fullName>State/Province Agencies</fullName>
                <color>#006600</color>
            </picklistValues>
            <picklistValues>
                <fullName>Intercompany</fullName>
                <color>#0B6FCE</color>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Client_ID__c</fullName>
        <displayFormat>ACC-{0}</displayFormat>
        <label>Client ID#</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Client_Master_Service_Agreement__c</fullName>
        <inlineHelpText>Do we have an MSA with this client?</inlineHelpText>
        <label>Client Master Service Agreement</label>
        <picklist>
            <picklistValues>
                <fullName>Unknown</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Client_Name_Alias__c</fullName>
        <inlineHelpText>Short name that can be used for reports, e.g., EPA for Environmental Protection Agency</inlineHelpText>
        <label>Client Name Alias</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Prospect__c</fullName>
        <formula>IF ( Number_of_Contracted_Opportunities__c  &gt; 0, &quot;Current/Prior&quot;,
IF (  Number_of_Open_Opportunities__c &gt; 0 &amp;&amp; Number_of_Contracted_Opportunities__c  &gt; 0, &quot;Current/Prior and Prospective&quot;,
IF (Number_of_Contracted_Opportunities__c  = 0, &quot;Prospective&quot;,
&quot;Prospective&quot;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Autopopulated based on Stages of related opportunities</inlineHelpText>
        <label>Client/Prospect</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Subgroup__c</fullName>
        <description>Subset of Client Group, name changed to Market Sector for a time to match GDP, name restored as part of BD ROI workstream implemented for beginning of FY14.</description>
        <label>Client Subgroup</label>
        <picklist>
            <controllingField>Client_Group__c</controllingField>
            <picklistValues>
                <fullName>Aerospace/Defense</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Airports/Aviation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Architect/Engineers/Consultants</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arts/Museum/Galleries/Cultural</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Automotive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chemical/Fertiliser</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chemical/Pharmaceutical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Construction Company - Buildings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Construction Company - Infrastructure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data/Technology/Communications</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Defense - Air Force</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Defense - Army</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Defense - Marines</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Defense - Navy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Defense - Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Education Agency / Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Education Services (Private)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Energy Agency / Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Environmental/Climate Agency/Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Food/Beverages/Agriculture</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Forestry/Pulp/Paper</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Freight Transportation (except rail) and Warehousing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Government Agency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Government Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Healthcare &amp; Life Sciences</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Healthcare Services (Private)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Individual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industrial/Commercial Developers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Justice/Prisons/Security Agency / Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal/Banking/Finance/Insurance</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Client_policy_on_gifts__c</fullName>
        <label>Client policy on gifts?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Comments_on_gift_policy__c</fullName>
        <inlineHelpText>Enter comments/description. If policy is lengthy, enter a note here and attach the entire policy under Notes &amp; Attachments.</inlineHelpText>
        <label>Comments on gift policy</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CountryLookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Country</label>
        <referenceTo>Country__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <inlineHelpText>If multiple, use country of headquarters address. If country is not in the list, send email to Salesforce_Help@aecom.com.</inlineHelpText>
        <label>Country - OLD</label>
        <picklist>
            <picklistValues>
                <fullName>Afghanistan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Albania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Algeria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Angola</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antigua and Barbuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Argentina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Armenia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Austria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Azerbaijan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahamas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahrain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bangladesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barbados</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belarus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belgium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belize</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bermuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bolivia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bosnia and Herzegovina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Botswana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brazil</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>British Indian Ocean Territory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brunei Darussalam</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bulgaria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Burkina Faso</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Burundi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cambodia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cameroon</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CreditHoldFlag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Credit Hold Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CreditRiskRating__c</fullName>
        <inlineHelpText>1298 - 1358 Medium Risk
0 - 1297 Severe Risk</inlineHelpText>
        <label>Credit Risk Rating</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Credit_Limit__c</fullName>
        <inlineHelpText>D&amp;B (or other) credit limit.</inlineHelpText>
        <label>Credit Limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CustomerAccountStatus__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Customer Account Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CustomerType__c</fullName>
        <label>Intercompany Customer</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>D_B_Rating__c</fullName>
        <inlineHelpText>Dun &amp; Bradstreet rating on financial stability. Reports are requested automatically and will be added to account records weekly.</inlineHelpText>
        <label>D&amp;B Rating</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Good</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fair</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Limited</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No information available</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>D_B_report_date__c</fullName>
        <inlineHelpText>Date the last Dun &amp; Bradstreet rating was received.</inlineHelpText>
        <label>D&amp;B report date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Districts__c</fullName>
        <inlineHelpText>Select AECOM districts that have an interest in the account, such as for mailings.</inlineHelpText>
        <label>District Interest</label>
        <picklist>
            <picklistValues>
                <fullName>ANZ - ACT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANZ - NAC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANZ - NZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANZ - QNT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANZ - VSA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANZ - WA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>British Columbia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canada East</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canada East - Baie Comeau</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canada East - Gatineau</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canada East - International</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canada East - Laval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canada East - Montreal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canada East - Quebec</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canada East - Rivière du Loup</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canada East - Rouyn Noranda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canada East - South Shore</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canada East - Trois Rivieres</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CI - IL, Southern WI, MN, IN, IA, M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CI - MI, Northern WI, OH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EM - Carolinas/Tennessee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EM - Denver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EM - EAST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EM - East PA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EM - Florida</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EM - Ft Collins</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EM - Georgia/Alabama</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EM - Hawaii</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EM - Illinois/Missouri</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EM - Midwest Default District</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>DoNotSurvey__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do Not Survey</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ECO_Disadvn_WomanOwned_SB__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ECO Disadvantage Woman Owned SB</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Eight_A_Certified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Eight A Certified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EndMarketSector__c</fullName>
        <label>End Market Sector</label>
        <picklist>
            <picklistValues>
                <fullName>TBD</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FY14_Key_Client__c</fullName>
        <inlineHelpText>Access restricted.</inlineHelpText>
        <label>FY14 Key Client</label>
        <picklist>
            <picklistValues>
                <fullName>KAM Tier I</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KAM Tier II</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KAM TIer III</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AME</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APAC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMEA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Key Account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BD ROI (Oracle) Key Account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANZ SPP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPP Lite</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WAC SPP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NSW SPP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>QLD SPP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NZ SPP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VicT SPP</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Finance_Accounting_RIsks__c</fullName>
        <description>Indicates that AECOM&apos;s F&amp;A department considers this account to be a financial risk based on past performance or other factors.</description>
        <inlineHelpText>Indicates that AECOM&apos;s F&amp;A department considers this account to be a financial risk based on past performance or other factors.</inlineHelpText>
        <label>Finance &amp; Accounting RIsks</label>
        <picklist>
            <picklistValues>
                <fullName>Payment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No F&amp;A Risk</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Former_Client_Name__c</fullName>
        <label>Former Client Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Global_Key_Account__c</fullName>
        <inlineHelpText>Change to Yes if this is one of AECOM&apos;s official global key accounts.</inlineHelpText>
        <label>Global Key Account</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GroupCustomer__c</fullName>
        <label>Group Customer Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hierarchy_Group_Name__c</fullName>
        <description>flat field for use in formulas</description>
        <formula>Hierarchy_Group__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hierarchy Group Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hierarchy_Group__c</fullName>
        <description>Groups all Accounts in the same hierarchy so that a report can fetch all Opportunities, for all the Accounts inside this group.</description>
        <formula>IF(
ISBLANK(ParentId), Name 
,
IF(
ISBLANK(Parent.ParentId),
Parent.Name,
IF(
ISBLANK(Parent.Parent.ParentId),
Parent.Parent.Name,
IF(
ISBLANK(Parent.Parent.Parent.ParentId),
Parent.Parent.Parent.Name,
IF(
ISBLANK(Parent.Parent.Parent.Parent.ParentId),
Parent.Parent.Parent.Parent.Name,
IF(
ISBLANK(Parent.Parent.Parent.Parent.Parent.ParentId),
Parent.Parent.Parent.Parent.Parent.Name,
Parent.Parent.Parent.Parent.Parent.Parent.Name
)
)
)
)
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Shows the account at the top of the hierarchy.</inlineHelpText>
        <label>Hierarchy Group</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hierarchy_ID__c</fullName>
        <description>Sets an account ID for all accounts in a hierarchy</description>
        <formula>IF( 
ISBLANK(ParentId),  Id  ,
IF( 
ISBLANK(Parent.ParentId), 
ParentId, 
IF( 
ISBLANK(Parent.Parent.ParentId), 
Parent.ParentId, 
IF( 
ISBLANK(Parent.Parent.Parent.ParentId), 
Parent.Parent.ParentId, 
IF( 
ISBLANK(Parent.Parent.Parent.Parent.ParentId), 
Parent.Parent.Parent.ParentId, 
IF( 
ISBLANK(Parent.Parent.Parent.Parent.Parent.ParentId), 
Parent.Parent.Parent.Parent.Parent.Name, 
Parent.Parent.Parent.Parent.Parent.ParentId
) 
) 
) 
) 
) 
)</formula>
        <label>Hierarchy ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hist_BLK_Minority_Inst__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hist BLK Minority Inst</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HubZone__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hub Zone</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IDReport__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IDReport</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Import_Source__c</fullName>
        <label>Import Source</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_DisabledVetOwned__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Disabled Vet Owned</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_MinorityOwned__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Minority Owned</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_SmallBusiness__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Small Business</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_VeteranOwned__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Veteran Owned</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_WomanOwned__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Woman Owned</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>